--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
   "name": "blue-react",
-  "version": "0.1.0",
-  "private": true,
+  "version": "6.10.0",
+  "description": "Blue React Components",
+  "license": "GNU",
+  "main": "index.js",
+  "types": "index.d.ts",
+  "files": [
+    "dist",
+    "index.js",
+    "index.d.ts"
+  ],
   "dependencies": {
+    "bootstrap": "^4.5.0",
+    "react": "^16.13.1",
+    "reactstrap": "^8.5.1"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -10,8 +23,11 @@
     "@types/node": "^12.12.47",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
   },
