--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "reactstrap": "^8.5.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -24,17 +27,22 @@
     "@types/node": "^12.12.47",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
+    "@types/react-highlight": "^0.12.2",
     "@types/react-router-dom": "^5.1.5",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-docgen": "^5.3.0",
     "react-dom": "^16.13.1",
+    "react-highlight": "^0.12.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-docs": "react-scripts build",
+    "build": "babel ./src/components --out-dir ./dist/components & node-sass ./dist/style.scss ./dist/style.css",
+    "docgen": "react-docgen ./src/components/ -o ./src/docs/data/docs.json",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
