--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-highlight": "^0.12.2",
     "@types/react-router-dom": "^5.1.5",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-docgen": "^5.3.0",
@@ -44,7 +45,9 @@
     "build": "babel ./src/components --out-dir ./dist/components & node-sass ./dist/style.scss ./dist/style.css",
     "docgen": "react-docgen ./src/components/ -o ./src/docs/data/docs.json",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build-docs",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
