--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "index.d.ts"
   ],
   "homepage": "https://bruegmann.github.io/blue-react",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "dependencies": {
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
