Added GitHub Action for NPM publish

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "predeploy": "npm run build-docs",
     "deploy": "gh-pages -d build",
     "prepublishOnly": "npm run build-release",
-    "postpublish": "node postpublish",
+    "postpublish": "node postpublish && npm run deploy",
     "release": "npm publish && npm run deploy"
   },
   "dependencies": {
