--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
+    "react-bootstrap-icons": "^1.0.0",
     "reactstrap": "^8.5.1"
   },
   "devDependencies": {
