--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blue-react",
-  "version": "6.16.0-alpha1",
+  "version": "6.16.0",
   "description": "Blue React Components",
   "license": "LGPL-3.0-or-later",
   "main": "index.js",
