--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
     "react-bootstrap-icons": "^1.0.0",
+    "react-markdown-github": "^3.3.1",
     "reactstrap": "^8.5.1"
   },
   "devDependencies": {
