--- a/package.json
+++ b/package.json
@@ -33,14 +33,9 @@
     "release": "npm publish && npm run deploy"
   },
   "dependencies": {
-    "@types/react-syntax-highlighter": "^13.5.0",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
-    "react": "^16.13.1",
-    "react-bootstrap-icons": "^1.0.0",
-    "react-markdown-github": "^3.3.1",
-    "react-syntax-highlighter": "^15.2.1",
-    "reactstrap": "^8.5.1"
+    "react": "^16.13.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.4",
@@ -55,14 +50,18 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-highlight": "^0.12.2",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-syntax-highlighter": "^13.5.0",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
+    "react-bootstrap-icons": "^1.0.0",
     "react-docgen": "^5.3.0",
     "react-dom": "^16.13.1",
     "react-highlight": "^0.12.0",
+    "react-markdown-github": "^3.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-syntax-highlighter": "^15.2.1",
+    "reactstrap": "^8.9.0",
     "typescript": "^3.7.5"
   },
   "eslintConfig": {
