--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "babel ./src/components --out-dir ./dist/components --extensions \".tsx,.js\" --source-maps inline",
     "build-css": "node-sass ./dist/style.scss ./dist/style.css",
     "build-release": "npm run build-types && npm run build && npm run build-css && npm run docgen",
-    "docgen": "react-docgen ./src/components/ -o ./src/docs/data/docs.json --exclude Utilities.js && node followUpDocs",
+    "docgen": "react-docgen ./src/components/ -o ./src/docs/data/docs.json --exclude Utilities.js --extension tsx && node followUpDocs",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build-docs",
