--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "release": "npm publish && npm run deploy"
   },
   "dependencies": {
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.0.1",
     "classnames": "^2.3.1"
   },
   "peerDependencies": {
@@ -54,7 +54,7 @@
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
-    "react-bootstrap-icons": "^1.0.0",
+    "react-bootstrap-icons": "^1.5.0",
     "react-docgen": "^5.4.0",
     "react-dom": "^17.0.2",
     "react-highlight": "^0.14.0",
@@ -62,7 +62,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-syntax-highlighter": "^15.4.3",
-    "reactstrap": "^8.9.0",
+    "reactstrap": "^9.0.0-0",
     "typescript": "^3.7.5"
   },
   "eslintConfig": {
