--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blue-react",
-  "version": "6.25.0",
+  "version": "7.0.0-beta.0",
   "description": "Blue React Components",
   "license": "LGPL-3.0-or-later",
   "main": "index.js",
