--- a/package.json
+++ b/package.json
@@ -59,10 +59,10 @@
     "react-dom": "^17.0.2",
     "react-markdown-github": "^3.3.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "react-syntax-highlighter": "^15.4.3",
     "reactstrap": "^9.0.0-0",
-    "typescript": "^3.7.5"
+    "typescript": "^4.3.5"
   },
   "eslintConfig": {
     "extends": "react-app"
