--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blue-react",
-  "version": "6.29.2",
+  "version": "6.30.0",
   "description": "Blue React Components",
   "license": "LGPL-3.0-or-later",
   "main": "index.js",
@@ -18,7 +18,7 @@
     "build-docs": "react-scripts build && npm run docgen",
     "build-types": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types --noEmit false",
     "build": "babel ./src/components --out-dir ./dist/components --extensions \".tsx,.js\"",
-    "build-css": "node-sass ./dist/style.scss ./dist/style.css",
+    "build-css": "node ./setVersionToStyleScss.js && node-sass ./dist/style.scss ./dist/style.css",
     "build-release": "npm run build-types && npm run build && npm run build-css && npm run docgen",
     "docgen": "react-docgen ./src/components/ -o ./src/docs/data/docs.json --exclude Utilities.js --extension tsx && node followUpDocs",
     "test": "react-scripts test",
