--- a/v7/manifest.json
+++ b/v7/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "browser",
-  "theme_color": "#3200E5",
+  "theme_color": "#261f31",
   "background_color": "#ffffff"
 }
