--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blue-react",
-  "version": "7.4.0",
+  "version": "7.4.2",
   "description": "Blue React Components",
   "license": "LGPL-3.0-or-later",
   "main": "index.js",
@@ -17,7 +17,7 @@
     "start": "react-scripts start",
     "build-docs": "react-scripts build && npm run docgen",
     "build-types": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types --noEmit false",
-    "build": "babel ./src/components --out-dir ./dist/components --extensions \".tsx,.js\"",
+    "build": "babel ./src/components --out-dir ./dist/components --extensions \".tsx,.js,.ts\"",
     "build-css": "node-sass ./dist/style.scss ./dist/style.css",
     "build-release": "npm run build-types && npm run build && npm run build-css && npm run docgen",
     "docgen": "react-docgen ./src/components/ -o ./src/docs/data/docs.json --exclude Utilities.js --exclude ModalProvider.tsx --extension tsx && node followUpDocs",
