--- a/package.json
+++ b/package.json
@@ -1,82 +1,83 @@
 {
-  "name": "blue-react",
-  "version": "7.4.2",
-  "description": "Blue React Components",
-  "license": "LGPL-3.0-or-later",
-  "main": "index.js",
-  "types": "index.d.ts",
-  "homepage": "https://bruegmann.github.io/blue-react/v7",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bruegmann/blue-react.git"
-  },
-  "bugs": {
-    "url": "https://github.com/bruegmann/blue-react/issues"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build-docs": "react-scripts build && npm run docgen",
-    "build-types": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types --noEmit false",
-    "build": "babel ./src/components --out-dir ./dist/components --extensions \".tsx,.js,.ts\"",
-    "build-css": "node-sass ./dist/style.scss ./dist/style.css",
-    "build-release": "npm run build-types && npm run build && npm run build-css && npm run docgen",
-    "docgen": "react-docgen ./src/components/ -o ./src/docs/data/docs.json --exclude Utilities.js --exclude ModalProvider.tsx --extension tsx && node followUpDocs",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build-docs",
-    "deploy": "gh-pages --dist build --dest v7",
-    "prepublishOnly": "npm i && npm run build-release",
-    "postpublish": "npm run deploy",
-    "release": "npm publish && npm run deploy"
-  },
-  "dependencies": {
-    "bootstrap": "~5.0.2",
-    "clsx": "^1.1.1"
-  },
-  "peerDependencies": {
-    "react": "^16.0.0 || ^17.0.0"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.9.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/bootstrap": "^5.0.17",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.47",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/react-syntax-highlighter": "^13.5.0",
-    "gh-pages": "^3.1.0",
-    "node-sass": "^4.14.1",
-    "react": "^17.0.2",
-    "react-bootstrap-icons": "^1.5.0",
-    "react-docgen": "^5.4.0",
-    "react-dom": "^17.0.2",
-    "react-markdown-github": "^3.3.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
-    "react-syntax-highlighter": "^15.4.3",
-    "reactstrap": "^9.0.0-0",
-    "typescript": "^4.3.5"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "blue-react",
+    "version": "7.4.2",
+    "description": "Blue React Components",
+    "license": "LGPL-3.0-or-later",
+    "main": "index.js",
+    "types": "index.d.ts",
+    "homepage": "https://bruegmann.github.io/blue-react/v7",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/bruegmann/blue-react.git"
+    },
+    "bugs": {
+        "url": "https://github.com/bruegmann/blue-react/issues"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build-docs": "react-scripts build && npm run docgen",
+        "build-types": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types --noEmit false",
+        "build": "babel ./src/components --out-dir ./dist/components --extensions \".tsx,.js,.ts\"",
+        "build-css": "node-sass ./dist/style.scss ./dist/style.css",
+        "build-release": "npm run build-types && npm run build && npm run build-css && npm run docgen",
+        "docgen": "react-docgen ./src/components/ -o ./src/docs/data/docs.json --exclude Utilities.js --exclude ModalProvider.tsx --extension tsx && node followUpDocs",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build-docs",
+        "deploy": "gh-pages --dist build --dest v7",
+        "prepublishOnly": "npm i && npm run build-release",
+        "postpublish": "npm run deploy",
+        "release": "npm publish && npm run deploy"
+    },
+    "dependencies": {
+        "bootstrap": "~5.0.2",
+        "clsx": "^1.1.1"
+    },
+    "peerDependencies": {
+        "react": "^16.0.0 || ^17.0.0"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.10.4",
+        "@babel/preset-env": "^7.10.4",
+        "@babel/preset-react": "^7.10.4",
+        "@babel/preset-typescript": "^7.9.0",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.5.0",
+        "@testing-library/user-event": "^7.2.1",
+        "@types/bootstrap": "^5.0.17",
+        "@types/jest": "^24.9.1",
+        "@types/node": "^12.12.47",
+        "@types/react": "^17.0.3",
+        "@types/react-dom": "^17.0.3",
+        "@types/react-router-dom": "^5.1.5",
+        "@types/react-syntax-highlighter": "^13.5.0",
+        "gh-pages": "^3.1.0",
+        "node-sass": "^4.14.1",
+        "prettier": "2.4.1",
+        "react": "^17.0.2",
+        "react-bootstrap-icons": "^1.5.0",
+        "react-docgen": "^5.4.0",
+        "react-dom": "^17.0.2",
+        "react-markdown-github": "^3.3.1",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "^4.0.3",
+        "react-syntax-highlighter": "^15.4.3",
+        "reactstrap": "^9.0.0-0",
+        "typescript": "^4.3.5"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
