--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "deploy": "gh-pages --dist build --dest v7",
         "prepublishOnly": "npm i && npm run build-release",
         "postpublish": "npm run deploy",
-        "release": "npm publish && npm run deploy"
+        "release": "npm publish && npm run deploy",
+        "prepare": "husky install"
     },
     "dependencies": {
         "bootstrap": "~5.0.2",
@@ -52,6 +53,8 @@
         "@types/react-router-dom": "^5.1.5",
         "@types/react-syntax-highlighter": "^13.5.0",
         "gh-pages": "^3.1.0",
+        "husky": "^7.0.2",
+        "lint-staged": "^11.1.2",
         "node-sass": "^4.14.1",
         "prettier": "2.4.1",
         "react": "^17.0.2",
@@ -79,5 +82,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "lint-staged": {
+        "**/*": "prettier --write --ignore-unknown"
     }
 }
