--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@popperjs/core": "^2.10.1",
         "bootstrap": "~5.0.2",
         "clsx": "^1.1.1"
     },
