Optimized CSS output

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "build-docs": "react-scripts build && npm run docgen",
         "build-types": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types --noEmit false",
         "build": "babel ./src/components --out-dir ./dist/components --extensions \".tsx,.js,.ts\"",
-        "build-css": "node ./setVersionToStyleScss.js && node-sass ./dist/style.scss ./dist/style.css",
+        "build-css": "node ./setVersionToStyleScss.js && node-sass ./dist/style.scss ./dist/style.css && npx postcss ./dist/style.css --use autoprefixer -r && npx postcss ./dist/style.css --use postcss-minify -o ./dist/style.min.css",
         "build-release": "npm run build-types && npm run build && npm run build-css && npm run docgen",
         "docgen": "react-docgen ./src/components/ -o ./src/docs/data/docs.json --exclude Utilities.js --exclude ModalProvider.tsx --extension tsx && node followUpDocs",
         "test": "react-scripts test",
@@ -53,10 +53,13 @@
         "@types/react-dom": "^17.0.3",
         "@types/react-router-dom": "^5.1.5",
         "@types/react-syntax-highlighter": "^13.5.0",
+        "autoprefixer": "^10.3.6",
         "gh-pages": "^3.1.0",
         "husky": "^7.0.2",
         "lint-staged": "^11.1.2",
         "node-sass": "^4.14.1",
+        "postcss-cli": "^9.0.1",
+        "postcss-minify": "^1.1.0",
         "prettier": "2.4.1",
         "react": "^17.0.2",
         "react-bootstrap-icons": "^1.5.0",
