--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "blue-react",
-    "version": "7.4.6",
+    "version": "7.5.0",
     "description": "Blue React Components",
     "license": "LGPL-3.0-or-later",
     "main": "index.js",
@@ -17,7 +17,7 @@
         "start": "react-scripts start",
         "build-docs": "react-scripts build && npm run docgen",
         "build-types": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types --noEmit false",
-        "build": "babel ./src/components --out-dir ./dist/components --extensions \".tsx,.js,.ts\"",
+        "build": "npm run prettier && babel ./src/components --out-dir ./dist/components --extensions \".tsx,.js,.ts\"",
         "build-css": "node ./setVersionToStyleScss.js && node-sass ./dist/style.scss ./dist/style.css && npx postcss ./dist/style.css --use autoprefixer -r && npx postcss ./dist/style.css --use postcss-minify -o ./dist/style.min.css",
         "build-release": "npm run build-types && npm run build && npm run build-css && npm run docgen",
         "docgen": "react-docgen ./src/components/ -o ./src/docs/data/docs.json --exclude Utilities.js --exclude ModalProvider.tsx --extension tsx && node followUpDocs",
@@ -28,7 +28,7 @@
         "prepublishOnly": "npm i && npm run build-release",
         "postpublish": "npm run deploy",
         "release": "npm publish && npm run deploy",
-        "prepare": "husky install"
+        "prettier": "prettier --write --ignore-unknown"
     },
     "dependencies": {
         "@popperjs/core": "^2.10.1",
@@ -55,7 +55,6 @@
         "@types/react-syntax-highlighter": "^13.5.0",
         "autoprefixer": "^10.3.6",
         "gh-pages": "^3.1.0",
-        "husky": "^7.0.2",
         "lint-staged": "^11.1.2",
         "node-sass": "^4.14.1",
         "postcss-cli": "^9.0.1",
@@ -86,8 +85,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "lint-staged": {
-        "**/*": "prettier --write --ignore-unknown"
     }
 }
