--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "start": "react-scripts start",
         "build-docs": "react-scripts build && npm run docgen",
         "build-types": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types --noEmit false",
-        "build": "npm run prettier && babel ./src/components --out-dir ./dist/components --extensions \".tsx,.js,.ts\"",
+        "build": "babel ./src/components --out-dir ./dist/components --extensions \".tsx,.js,.ts\"",
         "build-css": "node ./setVersionToStyleScss.js && node-sass ./dist/style.scss ./dist/style.css && npx postcss ./dist/style.css --use autoprefixer -r && npx postcss ./dist/style.css --use postcss-minify -o ./dist/style.min.css",
         "build-release": "npm run build-types && npm run build && npm run build-css && npm run docgen",
         "docgen": "react-docgen ./src/components/ -o ./src/docs/data/docs.json --exclude Utilities.js --exclude ModalProvider.tsx --extension tsx && node followUpDocs",
@@ -28,7 +28,7 @@
         "prepublishOnly": "npm i && npm run build-release",
         "postpublish": "npm run deploy",
         "release": "npm publish && npm run deploy",
-        "prettier": "prettier --write --ignore-unknown"
+        "prettier": "npx prettier --write ."
     },
     "dependencies": {
         "@popperjs/core": "^2.10.1",
