--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "blue-react",
-    "version": "7.7.0",
+    "version": "7.8.0-next.1",
     "description": "Blue React Components",
     "license": "LGPL-3.0-or-later",
     "main": "index.js",
@@ -26,7 +26,6 @@
         "predeploy": "npm run build-docs",
         "deploy": "gh-pages --dist build --dest v7",
         "prepublishOnly": "npm i && npm run build-release",
-        "postpublish": "npm run deploy",
         "release": "npm publish && npm run deploy",
         "prettier": "npx prettier --write ."
     },
