--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
         "prettier": "npx prettier --write ."
     },
     "dependencies": {
-        "@popperjs/core": "^2.10.1",
-        "bootstrap": "~5.0.2",
+        "@popperjs/core": "^2.10.2",
+        "bootstrap": "^5.1.3",
         "clsx": "^1.1.1"
     },
     "peerDependencies": {
