Improved accessibility for Modal

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,5 +6,6 @@
     "trailingComma": "none",
     "bracketSpacing": true,
     "jsxBracketSameLine": false,
-    "fluid": false
+    "fluid": false,
+    "printWidth": 120
 }
