--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.10.2",
-        "bootstrap": "5.0",
+        "bootstrap": "^5.1.3",
         "clsx": "^1.1.1"
     },
     "peerDependencies": {
