--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "blue-react",
-    "version": "8.1.6",
+    "version": "8.1.7",
     "description": "Blue React Components",
     "license": "LGPL-3.0-or-later",
     "main": "index.js",
@@ -35,7 +35,7 @@
         "clsx": "^1.1.1"
     },
     "peerDependencies": {
-        "react": "^16.0.0 || ^17.0.0"
+        "react": "^16.0.0 || ^17.0.0 || ^18.0.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.10.4",
