--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
         "autoprefixer": "^10.3.6",
         "gh-pages": "^3.1.0",
         "lint-staged": "^11.1.2",
-        "node-sass": "^4.14.1",
         "postcss-cli": "^9.0.1",
         "postcss-minify": "^1.1.0",
         "prettier": "2.4.1",
@@ -68,6 +67,7 @@
         "react-scripts": "^4.0.3",
         "react-syntax-highlighter": "^15.4.3",
         "reactstrap": "^9.0.0-0",
+        "sass": "^1.51.0",
         "typescript": "^4.3.5"
     },
     "eslintConfig": {
