--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "build-docs": "react-scripts build && npm run docgen",
         "build-types": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types --noEmit false",
         "build": "babel ./src/components --out-dir ./dist/components --extensions \".tsx,.js,.ts\"",
-        "build-css": "node ./setVersionToStyleScss.js && sass ./dist/style.scss ./dist/style.css && npx postcss ./dist/style.css --use autoprefixer -r && npx postcss ./dist/style.css --use postcss-minify -o ./dist/style.min.css",
+        "build-css": "node ./setVersionToStyleScss.js && node-sass ./dist/style.scss ./dist/style.css && npx postcss ./dist/style.css --use autoprefixer -r && npx postcss ./dist/style.css --use postcss-minify -o ./dist/style.min.css",
         "build-release": "npm run build-types && npm run build && npm run build-css && npm run docgen",
         "docgen": "react-docgen ./src/components/ -o ./src/docs/data/docs.json --exclude Utilities.js --extension tsx && node followUpDocs",
         "test": "react-scripts test",
@@ -55,6 +55,7 @@
         "autoprefixer": "^10.3.6",
         "gh-pages": "^3.1.0",
         "lint-staged": "^11.1.2",
+        "node-sass": "^6.0.1",
         "postcss-cli": "^9.0.1",
         "postcss-minify": "^1.1.0",
         "prettier": "2.4.1",
@@ -67,7 +68,6 @@
         "react-scripts": "^4.0.3",
         "react-syntax-highlighter": "^15.4.3",
         "reactstrap": "^9.0.0-0",
-        "sass": "^1.51.0",
         "typescript": "^4.3.5"
     },
     "eslintConfig": {
