--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "blue-react",
-    "version": "8.3.4",
+    "version": "8.4.0-beta.2",
     "description": "Blue React Components",
     "license": "LGPL-3.0-or-later",
     "main": "index.js",
@@ -26,12 +26,12 @@
         "predeploy": "npm run build-docs",
         "deploy": "gh-pages --dist build --dest v8",
         "prepublishOnly": "npm i && npm run build-release",
-        "release": "npm publish && npm run deploy",
+        "release": "npm publish --tag next && npm run deploy",
         "prettier": "npx prettier --write ."
     },
     "dependencies": {
-        "@popperjs/core": "^2.10.2",
-        "bootstrap": "^5.1.3",
+        "@popperjs/core": "^2.11.5",
+        "bootstrap": "^5.2.0-beta1",
         "clsx": "^1.1.1"
     },
     "peerDependencies": {
@@ -60,7 +60,7 @@
         "postcss-minify": "^1.1.0",
         "prettier": "2.4.1",
         "react": "^18.1.0",
-        "react-bootstrap-icons": "^1.5.0",
+        "react-bootstrap-icons": "^1.8.2",
         "react-docgen": "^5.4.0",
         "react-dom": "^18.1.0",
         "react-markdown-github": "^3.3.1",
