--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.10.2",
+        "blue-web-components": "github:bruegmann/blue-web-components",
         "bootstrap": "^5.1.3",
         "clsx": "^1.1.1"
     },
