--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "blue-react",
-    "version": "8.4.4",
+    "version": "8.4.5",
     "description": "Blue React Components",
     "license": "LGPL-3.0-or-later",
     "main": "index.js",
@@ -31,7 +31,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.10.2",
-        "bootstrap": "^5.1.3",
+        "bootstrap": "5.1.2",
         "clsx": "^1.1.1"
     },
     "peerDependencies": {
