--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
-        "bootstrap": "~5.2.2",
+        "bootstrap": "~5.3.0-alpha3",
         "clsx": "^1.1.1"
     },
     "peerDependencies": {
