--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "clsx": "^1.1.1"
     },
     "peerDependencies": {
-        "react": "^16.0.0 || ^17.0.0 || ^18.0.0"
+        "react": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.10.4",
