--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "blue-react",
-    "version": "9.10.0",
+    "version": "9.10.1",
     "description": "Blue React Components",
     "license": "LGPL-3.0-or-later",
     "main": "index.js",
@@ -32,7 +32,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
-        "blue-web": "file:../blue-web/blue-web-1.0.1.tgz",
+        "blue-web": "^1.0.1",
         "bootstrap": "~5.3.3",
         "clsx": "^1.1.1"
     },
