--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "blue-react",
-    "version": "9.12.1",
+    "version": "10.0.0-rc1",
     "description": "Blue React Components",
     "license": "LGPL-3.0-or-later",
     "main": "index.js",
     "types": "index.d.ts",
-    "homepage": "https://bruegmann.github.io/blue-react/v9",
+    "homepage": "https://bruegmann.github.io/blue-react/v10",
     "repository": {
         "type": "git",
         "url": "https://github.com/bruegmann/blue-react.git"
@@ -24,15 +24,15 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "predeploy": "npm run build-docs",
-        "deploy": "gh-pages --dist build --dest v9",
+        "deploy": "gh-pages --dist build --dest v10",
         "prepublishOnly": "npm i && npm run build-release",
-        "release": "npm publish && npm run deploy",
+        "release": "npm publish --tag next && npm run deploy",
         "prettier": "npx prettier --write .",
         "license-report": "npx license-report --prod --output=json > ./src/docs/data/license-report.json"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
-        "blue-web": "^1.3.2",
+        "blue-web": "^1.7.0",
         "bootstrap": "~5.3.3",
         "clsx": "^1.1.1"
     },
