Update build configuration, remove deprecated components, and adjust TypeScript settings

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
     "presets": [
-        "@babel/preset-env",
+        [
+            "@babel/preset-env",
+            {
+                "modules": false // Verhindert die Transformation von ES-Modules
+            }
+        ],
         "@babel/preset-react",
         [
             "@babel/preset-typescript",
