--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "blue-react",
-    "version": "10.0.0-rc1",
+    "version": "10.0.0-rc2",
     "description": "Blue React Components",
     "license": "LGPL-3.0-or-later",
     "type": "module",
@@ -16,17 +16,17 @@
     },
     "scripts": {
         "start": "vite",
-        "build-docs": "tsc -b && vite build && npm run docgen",
+        "build-docs": "tsc -b && vite build --base=/blue-react/v10/ && npm run docgen",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
-        "build-types": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types --noEmit false",
+        "build-types": "tsc -p tsconfig.app.json --declaration --emitDeclarationOnly --declarationDir ./dist/types --noEmit false --composite false",
         "build": "babel ./src/components --out-dir ./dist/components --extensions \".tsx,.js,.ts\"",
         "build-release": "npm run build-types && npm run build && npm run docgen",
         "docgen": "react-docgen ./src/components/ -o ./src/docs/data/docs.json --extension tsx && node followUpDocs && npm run license-report",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "predeploy": "npm run build-docs",
-        "deploy": "gh-pages --dist build --dest v10",
+        "deploy": "gh-pages --dist deployment --dest v10",
         "prepublishOnly": "npm i && npm run build-release",
         "release": "npm publish --tag next && npm run deploy",
         "prettier": "npx prettier --write .",
@@ -39,7 +39,7 @@
         "clsx": "^1.1.1"
     },
     "peerDependencies": {
-        "react": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
+        "react": "^17.0.0 || ^18.0.0 || ^19.0.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.10.4",
