--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "blue-react",
-    "version": "10.0.0-rc2",
+    "version": "10.0.0-rc3",
     "description": "Blue React Components",
     "license": "LGPL-3.0-or-later",
     "type": "module",
@@ -35,7 +35,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
-        "blue-web": "^1.7.0",
+        "blue-web": "file:../blue-web/blue-web-1.7.1.tgz",
         "bootstrap": "~5.3.3",
         "clsx": "^1.1.1"
     },
