--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "blue-react",
-    "version": "10.0.0-rc3",
+    "version": "10.0.0-rc4",
     "description": "Blue React Components",
     "license": "LGPL-3.0-or-later",
     "type": "module",
@@ -23,7 +23,7 @@
         "build-types": "tsc -p tsconfig.app.json --declaration --emitDeclarationOnly --declarationDir ./dist/types --noEmit false --composite false",
         "build": "babel ./src/components --out-dir ./dist/components --extensions \".tsx,.js,.ts\"",
         "build-release": "npm run build-types && npm run build && npm run docgen",
-        "docgen": "react-docgen ./src/components/ -o ./src/docs/data/docs.json --extension tsx && node followUpDocs && npm run license-report",
+        "docgen": "react-docgen ./src/components/ --ignore Layout -o ./src/docs/data/docs.json --extension tsx && node followUpDocs && npm run license-report",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "predeploy": "npm run build-docs",
