Update Blue-Web & Install React Compiler

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "blue-react",
-    "version": "10.2.1001",
+    "version": "10.2.0",
     "description": "Blue React Components",
     "license": "LGPL-3.0-or-later",
     "type": "module",
@@ -35,7 +35,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
-        "blue-web": "^1.17.4",
+        "blue-web": "^1.19.1",
         "bootstrap": "~5.3.3",
         "clsx": "^1.1.1"
     },
@@ -52,12 +52,13 @@
         "@types/react-dom": "^19.0.2",
         "@types/react-router-dom": "^5.3.3",
         "@types/react-syntax-highlighter": "^13.5.0",
-        "@typescript-eslint/eslint-plugin": "^7.15.0",
-        "@typescript-eslint/parser": "^7.15.0",
-        "@vitejs/plugin-react": "^4.3.1",
+        "@typescript-eslint/eslint-plugin": "^8.46.4",
+        "@typescript-eslint/parser": "^8.46.4",
+        "@vitejs/plugin-react": "^5.0.4",
         "babel-plugin-add-import-extension": "^1.6.0",
-        "eslint": "^8.57.0",
-        "eslint-plugin-react-hooks": "^4.6.2",
+        "babel-plugin-react-compiler": "^19.1.0-rc.3",
+        "eslint": "^9.37.0",
+        "eslint-plugin-react-hooks": "^6.1.1",
         "eslint-plugin-react-refresh": "^0.4.7",
         "gh-pages": "^6.3.0",
         "license-report": "^6.2.0",
