Refactor NewMenuItem examples and update license report
- Removed obsolete examples: "Children as popover", "Grouped collapse"
- Updated "Current" example to use react-bootstrap-icons for icons
- Added new examples for "Behave as collapse group", "Behave as collapse", and "Behave as popover group"
- Updated license report with new version for "blue-web" and added "@react-docgen/cli" dependency
- Modified ComponentPage to handle multiple ComponentDocumentation entries
- Adjusted types to extend from react-docgen's Documentation

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "build-types": "tsc -p tsconfig.app.json --declaration --emitDeclarationOnly --declarationDir ./dist --noEmit false --composite false",
         "build": "babel ./src/components --out-dir ./dist/components --extensions \".tsx,.js,.ts\"",
         "build-release": "npm run build-types && npm run build && npm run docgen",
-        "docgen": "react-docgen ./src/components/ --ignore Layout -o ./src/docs/data/docs.json --extension tsx && node followUpDocs && npm run license-report",
+        "docgen": "react-docgen ./src/components/**/*.tsx --ignore Layout -o ./src/docs/data/docs.json && node followUpDocs && npm run license-report",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "predeploy": "npm run build-docs",
@@ -35,7 +35,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
-        "blue-web": "file:../blue-web/blue-web-1.19.1014.tgz",
+        "blue-web": "file:../blue-web/blue-web-1.19.1016.tgz",
         "bootstrap": "~5.3.3",
         "clsx": "^1.1.1"
     },
@@ -47,6 +47,7 @@
         "@babel/preset-env": "^7.10.4",
         "@babel/preset-react": "^7.10.4",
         "@babel/preset-typescript": "^7.9.0",
+        "@react-docgen/cli": "^3.0.4",
         "@types/bootstrap": "^5.0.17",
         "@types/react": "^19.0.2",
         "@types/react-dom": "^19.0.2",
@@ -65,7 +66,7 @@
         "prettier": "2.4.1",
         "react": "^19.0.0",
         "react-bootstrap-icons": "^1.9.1",
-        "react-docgen": "^5.4.0",
+        "react-docgen": "^8.0.2",
         "react-dom": "^19.0.0",
         "react-markdown": "^9.0.1",
         "react-router-dom": "^5.3.3",
